# bioscape

./: .env  LICENSE  README.md
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: egui.rs  main.rs  network.rs  scenes.rs  state.rs  world.rs
client/src/components/: marker.rs
client/src/scenes/: game.rs  menu.rs  options.rs  pause.rs  trade.rs
client/src/systems/: hover.rs  inventory.rs  mod.rs  movement.rs  render.rs
client/src/utils/: custom.rs  mod.rs  screen.rs
common/: Cargo.toml
common/src/: lib.rs  packet.rs
common/src/component/: info.rs  item.rs  marker.rs  mod.rs  position.rs  sprite.rs
server/: Cargo.toml
server/src/: accept.rs  command.rs  data.rs  main.rs  transfer.rs
