[package]
name = "bioscape-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[dependencies]
tetra = { version = "0.6", features = ["sdl2_bundled"] }
hecs = "0.6"
egui = "0.14"
rand = "0.8"
bioscape-common = { path = "../common" }

# Data
ron = "0.6"
serde = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.5"

# Config
config = "0.11"
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.9"
