[package]
name = "bioscape-server"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
bioscape-common = { path = "../common" }
crossbeam-channel = "0.5"
serde_json = "1.0"
hecs = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.2"
dotenv = "0.15"
