[package]
name = "bioscape-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
bioscape-common = { path = "../common" }
crossbeam-channel = "0.5"
serde_json = "1.0"
hecs = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
